--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-azure-functions-durable
+azure-functions-durable>=1.0.0b6
 azure-storage-blob
