--- a/.github/workflows/master_yamamoto-blob-test-func.yml
+++ b/.github/workflows/master_yamamoto-blob-test-func.yml
@@ -13,6 +13,8 @@ on:
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.9' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  AZURE_RESOURCE_GROUP_NAME: 'yamamotoblobtest'
+  AZURE_FUNCTIONAPP_NAME: 'yamamoto-blob-test-func'
 
 jobs:
   build:
